# musicbot

./: .bumpversion.cfg  .coveragerc  .env  .envrc  .flake8  .gitignore  .landscape.yml  .pylintrc  .python-version  .travis.yml  Caddyfile  Dockerfile.caddy  Dockerfile.cli  Dockerfile.postgraphile  Dockerfile.postgresql  Dockerfile.ui  HELP.rst  Pipfile  README.rst  TODO.rst  close-listen.sh  code-format.sh  coverage.sh  dev.sh  docker-compose.yml  edgedb.toml  full-check.sh  gen-deps.sh  gen-doc.sh  gendoc.sh  linting.sh  music.sh  musicbot  mypy.ini  open-listen.sh  package-lock.json  package.json  packages-dev.txt  packages.txt  pyproject.toml  (+13 more)
.githooks/: pre-commit
.github/workflows/: pythonapp.yml
commands/: completion.py  config.py  consistency.py  db.py  file.py  filter.py  folder.py  playlist.py  server.py  spotify.py  stats.py  tag.py  task.py  youtube.py
credentials/: local_dev.json
dbschema/: default.esdl  default.gel
dbschema/fixups/: m1tklogxiitcxuoe6oapcrpljmwhpboqjgzujhj5ffrwkx5px6bxva-m1oy3zaoi4vykcutcfrianlcvpose52w7fdmesc6vcv3l73mlb5p4a.edgeql
dbschema/migrations/: 00001-m14r34k.edgeql  00001-m1bjr2r.edgeql  00001-m1wq5r6.edgeql  00001.edgeql  00002-m1iwthp.edgeql  00002-m1nju5p.edgeql  00002.edgeql  00003-m15lyt6.edgeql  00003-m1b5dzc.edgeql  00003.edgeql  00004-m1pxtlm.edgeql  00004.edgeql  00005-m1t5hpb.edgeql  00005.edgeql  00006-m15kxpm.edgeql  00006.edgeql  00007-m1a6am2.edgeql  00007.edgeql  00008-m1a27gu.edgeql  00008.edgeql  00009-m17u3zt.edgeql  00009.edgeql  00010-m1acwua.edgeql  00010.edgeql  00011.edgeql
doc/: Makefile  TODO.rst  buffer.py  buffer.txt  concept.txt  conf.py  examples.sql  file.py  forum_example.sql  functions.sql  gen.py  gen.sh  graphql.txt  help.rst  index.rst  make.bat  server.py  tables.sql  tag.py  todo.rst  triggers.sql  views.sql  youtube.py
edgeproxy/: Cargo.toml
edgeproxy/src/: auth.rs  cli.rs  edgify.rs  errors.rs  main.rs  proxy.rs
edgeproxy/static/: index.html
hyperedge/: index.html  main.html
lib/: collection.py  config.py  database.py  file.py  filter.py  forms.py  helpers.py  lib.py  mfilter.py  musicbot.sql  options.py  persistence.py  playlist.py  server.py  webfilter.py  youtube.py
lib/schema/: views.sql
lib/templates/: album.html  artist.html  artists.html  generate.html  index.html  keywords.html  layout.html  music.html  stats.html
lib/web/: api.py  app.py  collection.py  config.py  filter.py  forms.py  helpers.py  limiter.py  mfilter.py
lib/web/templates/: album.html  albums.html  artist.html  (+16 more)
musicbot/: __init__.py  admin.py  admin_options.py  artist.py  backtrace.py  cli.py  click_helpers.py  config.py  database.py  defaults.py  exceptions.py  file.py  folder.py  folders.py  global_options.py  graphql.py  graphql_client.py  helpers.py  lib.py  link_options.py  local.py  main.py  music.py  music_filter.py  musicdb.py  object.py  one_way_bool.py  player.py  playlist.py  playlist_options.py  queries.py  queries_bak.py  scan_folders.py  search_results.py  spotify.py  spotify_options.py  timing.py  user.py  user_options.py  version_checker.py  (+1 more)
musicbot/backend/: database.py  postgraphile.py
musicbot/cli/: admin.py  config.py  database.py  file.py  folder.py  folders.py  link_options.py  music_filter.py  musicdb.py  options.py  playlist.py  scan_folders.py  spotify.py  user.py
musicbot/commands/: __init__.py  artist.py  completion.py  config.py  consistency.py  database.py  db.py  file.py  filter.py  fingerprint.py  folder.py  genre.py  json.py  local.py  music.py  music_filter.py  play.py  playlist.py  postgraphile.py  spotify.py  stats.py  tag.py  task.py  user.py  youtube.py
musicbot/lib/: collection.py  config.py  database.py  file.py  helpers.py  mfilter.py  musicbot.py  persistence.py  postgraphile.py  spotify.py  user.py
musicbot/music/: file.py  fingerprint.py  folders.py  helpers.py  mfilter.py  music_filter.py  music_filter_options.py  spotify.py  youtube.py
musicbot/queries/: delete_musics.edgeql  delete_musics_async_edgeql.py  drop_schema.edgeql  drop_schema_async_edgeql.py  gen_bests.edgeql  gen_bests_async_edgeql.py  gen_playlist.edgeql  gen_playlist_async_edgeql.py  pike_keywords.edgeql  pike_keywords_async_edgeql.py  remove.edgeql  remove_async_edgeql.py  select_artists.edgeql  select_artists_async_edgeql.py  select_folder.edgeql  select_folder_async_edgeql.py  soft_clean.edgeql  soft_clean_async_edgeql.py  upsert.edgeql  upsert_album.edgeql  upsert_album_async_edgeql.py  upsert_artist.edgeql  upsert_artist_async_edgeql.py  upsert_async_edgeql.py  upsert_folder.edgeql  upsert_folder_async_edgeql.py  upsert_genre.edgeql  upsert_genre_async_edgeql.py  upsert_keyword.edgeql  upsert_keyword_async_edgeql.py  upsert_music.edgeql  upsert_music_async_edgeql.py
musicbot/schema/: a_schemas.sql  c_user.sql  create.sql  d_music.sql  db.sql  db_stats.sql  e_link.sql  extensions.sql  f_filter.sql  f_views.sql  filter.sql  g_playlist.sql  h_stat.sql  i_grants.sql  playlist.sql  raw_music.sql  stat.sql  user.sql
schema/: data.sql  functions.sql  tables.sql  triggers.sql  views.sql
scripts/: .htpasswd  .postgraphilerc.js  Caddyfile  api.musicbot  default.filter  dev.sh  music.sh  musicbot.nginx  musicbot.service  nginx.conf  nginx.service  pre-push  preprod.sh  prod.sh  web.sh  x5.sh
test/: cli_tests.sh  do.sh  functional_tests.sh  test.py  tests.sh  unit_tests.sh  unittest.sh  web_tests.sh
tests/: __init__.py  cli_tests.sh  conftest.py  do.sh  fixtures.py  musicbot_test.ini  test.py  test_admin.py  test_cli.py  test_collection.py  test_completion.py  test_database.py  test_files.py  test_filter.py  test_folder.py  test_helpers.py  test_lib.py  test_local.py  test_music.py  test_musicbot.py  test_spotify.py  test_user.py  test_web.py  test_youtube.py  unit_tests.sh  web_tests.sh
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: main.js  router.js  store.js
vue-musicbot/: README.md  package.json
vue-musicbot/public/: index.html
vue-musicbot/src/: App.vue  main.js  store.js
vue-musicbotx/: package.json
vue-musicbotx/public/: index.html
(+51 files in other folders)
