[tool.poetry]
name = "musicbot"
version = "0.9.0"
description = "Music swiss army knife"
authors = ["Adrien Pensart <crunchengine@gmail.com>"]
maintainers = ["Adrien Pensart <crunchengine@gmail.com>"]
homepage = "https://github.com/AdrienPensart/musicbot"
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
musicbot = 'musicbot.main:main'
pgcli = 'pgcli.main:cli'

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pyacoustid = "^1.1"
python-vlc = "^3.0"
prompt_toolkit = "^3.0.2"
mutagen = "^1.44.0"
requests = "^2.24.0"
spotipy = "^2.16.0"
pydub = "^0.25.1"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.23.0"
attrs = "^23.1.0"
colorlog = "^6.4.1"
progressbar2 = "^4.0.0"
rich = "^13.0.0"
click-skeleton = "^0.28.1"
beartype = "^0.16.0"
humanize = "^4.0.0"
python-slugify = "^8.0.0"
edgedb = "^1.0.0"
Pygments = "^2.11.2"
more-itertools = "^10.0.0"
yt-dlp = "^2023.1.2"
natsort = "^8.1.0"
orjson = "^3.8.0"
ipython = "^8.7.0"
async-lru = "^2.0.2"
watchfiles = "^0.21.0"
textual = "^0.40.0"
methodtools = "^0.4.7"
click = "^8.1.6"
httpx = "^0.25.0"
pgcli = "^3.5.0"
ruamel-yaml = "^0.17.21"
shazamio = "^0.4.0.1"
psycopg = {extras = ["binary", "pool"], version = "^3.1.10"}

[tool.isort]
profile = 'black'

[tool.black]
line-length = 180

[tool.ruff]
ignore = ["E501"]

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.272"
coverage-badge = "^1.0"
restructuredtext_lint = "^1.3.0"
bump2version = "^1.0.0"
pylint = "^3.0"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.0.1"
flake8 = "^6.0.0"
mypy = "^1.0"
isort = "^5.10.1"
vulture = "^2.3"
ruff = "^0.1"
black = "^23.1.0"
textual-dev = "^1.1.0"
types-requests = "^2.25.0"
types-python-slugify = "^8.0.0"

[tool.pyright]
include = [
    "musicbot",
    "tests"
]
reportGeneralTypeIssues = false
reportPrivateImportUsage = false
reportUnusedCallResult = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--timeout 600 --cov-report term-missing --durations=0 --cov musicbot "
log_cli = true

[tool.pylint.master]
jobs = 4
[tool.pylint.messages_control]
disable = """
method-cache-max-size-none,too-few-public-methods,logging-format-interpolation,line-too-long,too-many-arguments,protected-access,missing-docstring,invalid-name,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-many-ancestors,abstract-method,anomalous-backslash-in-string,import-outside-toplevel,redefined-outer-name,unnecessary-lambda,c-extension-no-member,logging-fstring-interpolation,too-many-boolean-expressions,use-dict-literal,broad-except
"""

[tool.mypy]
allow_redefinition = false
disallow_untyped_defs = true
ignore_errors = false
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
no_incremental = true

[[tool.mypy.overrides]]
module = [
    "mutagen.*",
]
implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "IPython",
    "methodtools",
    "pgcli.*",
]
ignore_missing_imports = true
