[project]
name = "musicbot"
version = "0.10.0"
description = "Music swiss army knife"
# authors = ["Adrien Pensart <crunchengine@gmail.com>"]
# maintainers = ["Adrien Pensart <crunchengine@gmail.com>"]
# homepage = "https://github.com/AdrienPensart/musicbot"
license = "MIT"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "async-lru>=2.0.4",
    "beartype>=0.19.0",
    "click>=8.1.7",
    "click-skeleton>=0.30.1",
    "colorlog>=6.9.0",
    "edgedb>=2.2.0",
    "fuzzywuzzy>=0.18.0",
    "humanize>=4.11.0",
    "ipython>=8.30.0",
    "more-itertools>=10.5.0",
    "mutagen>=1.47.0",
    "natsort>=8.4.0",
    "orjson>=3.10.12",
    "pydub>=0.25.1",
    "pygments>=2.18.0",
    "python-levenshtein>=0.26.1",
    "python-slugify>=8.0.4",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "spotipy>=2.24.0",
    "textual>=0.89.1",
    "watchfiles>=1.0.0",
    "yt-dlp>=2024.12.6",
    "httpx>=0.28.0",
    "ruamel-yaml>=0.18.6",
    "shazamio>=0.6.0",
    "psycopg>=3.2.3",
    "progressbar3>=4.3.4",
    "yaspin>=3.1.0",
    "pydantic-core>=2.24.2",
    "pyacoustid>=1.3.0",
    "pgcli>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
musicbot = 'musicbot.main:main'
pgcli = 'pgcli.main:cli'

[tool.isort]
profile = 'black'

[tool.black]
line-length = 180

[tool.ruff]
lint.ignore = ["E501"]

[tool.pyright]
include = [
    "musicbot",
    "tests"
]
exclude = ["musicbot/queries"]
reportGeneralTypeIssues = false
reportPrivateImportUsage = false
reportUnusedCallResult = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ignore=data --timeout 600 --cov-report term-missing --durations=0 --cov musicbot "
log_cli = true

[tool.pylint.master]
jobs = 4
ignore-paths = "musicbot/queries"
[tool.pylint.messages_control]
disable = """
method-cache-max-size-none,too-few-public-methods,logging-format-interpolation,line-too-long,too-many-arguments,protected-access,missing-docstring,invalid-name,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-many-ancestors,abstract-method,anomalous-backslash-in-string,import-outside-toplevel,redefined-outer-name,unnecessary-lambda,c-extension-no-member,logging-fstring-interpolation,too-many-boolean-expressions,use-dict-literal,broad-except,too-many-positional-arguments
"""

[tool.mypy]
exclude = "musicbot/queries"
allow_redefinition = false
disallow_untyped_defs = true
ignore_errors = false
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "mutagen.*",
]
implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "IPython",
    "pgcli.*",
]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "bump2version>=1.0.1",
    "coverage-badge>=1.1.2",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pylint>=3.3.2",
    "pyright>=1.1.390",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.1",
    "restructuredtext-lint>=1.4.0",
    "ruff>=0.8.2",
    "setuptools>=75.6.0",
    "textual-dev>=1.7.0",
    "types-python-slugify>=8.0.2.20240310",
    "vulture>=2.13",
]
