[package]
name = "edgeproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
tokio = { version = "1", features = ["macros"] }
salvo = { version = "0.53", features = ["proxy", "logging", "cache", "serve-static", "basic-auth"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
