[package]
name = "edgeproxy"
version = "0.1.0"        
description = "reverse proxy for edgedb queries"
authors = ["Adrien Pensart <crunchengine@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
salvo = { version = "0.67", features = ["logging", "cache", "serve-static", "basic-auth"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# http-body-util = "0.1.0"
thiserror = "1.0.53"
clap = { version = "4.4.12", features = ["derive"] }
humantime = "2.1.0"
edgedb-tokio = "0.5.0"
once_cell = "1.19.0"
